# othello_gui

./: .gitignore  .gitmodules  Cargo.toml  protocol-specification.md
src/: ai.rs  arena.rs  console.rs  elo.rs  game.rs  lib.rs  main.rs  mixed_player.rs  othello.rs  run.rs  visual.rs
