[package]
name = "othello_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wait-timeout = "0.2.0"
nannou = "0.18.1"
rand = "0.8.5"
othello_core_lib = { git = "https://github.com/Error-42/othello_core_lib.git" }
