[package]
name = "othello_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.5"
crossterm = "0.25.0"
nannou = "0.18.1"
othello_core_lib = { git = "https://github.com/Error-42/othello_core_lib.git" }
rand = "0.8.5"
skillratings = "0.24.0"
textwrap = { version = "0.16.0", features = ["smawk"] }
textwrap-macros = "0.3.0"
wait-timeout = "0.2.0"
